travail/2e_semestre/bachelor_Sem/labo/outil/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> CALC calc
Rule 2     start -> CHECK check
Rule 3     start -> SPLIT split
Rule 4     start -> ISNUMBER NUM
Rule 5     start -> ISLIST list
Rule 6     check -> check1
Rule 7     check -> check2
Rule 8     check1 -> c_premises MINUS MINUS c_conclusion
Rule 9     check2 -> MINUS MINUS c_conclusion
Rule 10    c_premises -> c_statement
Rule 11    c_premises -> c_statement c_more
Rule 12    c_more -> COMA c_statement
Rule 13    c_more -> COMA c_statement c_more
Rule 14    c_more -> NUM
Rule 15    c_statement -> c_exp comparator c_statement2
Rule 16    c_statement2 -> c_exp
Rule 17    c_sym -> EQUAL
Rule 18    c_sym -> MINUS SUP
Rule 19    c_sym -> IN
Rule 20    c_conclusion -> c_statement
Rule 21    c_exp -> NAME OP c_subexp CP
Rule 22    c_exp -> c_term
Rule 23    c_subexp -> c_subexp c_moreexp
Rule 24    c_subexp -> NUM
Rule 25    c_subexp -> VAR
Rule 26    c_subexp -> NAME
Rule 27    c_subexp -> c_list
Rule 28    c_subexp -> c_exp
Rule 29    c_term -> NUM
Rule 30    c_term -> VAR
Rule 31    c_term -> NAME
Rule 32    c_term -> c_list
Rule 33    c_list -> OSB c_morelist CSB
Rule 34    c_morelist -> c_term COMA c_morelist
Rule 35    c_morelist -> c_term
Rule 36    c_list -> OSB CSB
Rule 37    c_list -> INF c_morelist SUP
Rule 38    c_moreexp -> COMA c_subexp c_moreexp
Rule 39    c_moreexp -> SEMICOLON c_subexp c_moreexp
Rule 40    c_moreexp -> COMA c_subexp
Rule 41    c_moreexp -> SEMICOLON c_subexp
Rule 42    calc -> exp
Rule 43    calc -> condition
Rule 44    condition -> exp comparator exp
Rule 45    comparator -> EQUAL EQUAL
Rule 46    comparator -> SUP
Rule 47    comparator -> SUP EQUAL
Rule 48    comparator -> INF
Rule 49    comparator -> INF EQUAL
Rule 50    comparator -> EQUAL
Rule 51    exp -> NAME OP exp CP
Rule 52    exp -> exp more
Rule 53    exp -> NUM
Rule 54    exp -> list
Rule 55    list -> OSB morelist CSB
Rule 56    morelist -> NUM COMA morelist
Rule 57    morelist -> NUM SEMICOLON morelist
Rule 58    morelist -> NUM
Rule 59    list -> OSB CSB
Rule 60    list -> INF morelist SUP
Rule 61    more -> COMA exp more
Rule 62    more -> SEMICOLON exp more
Rule 63    more -> COMA exp
Rule 64    more -> SEMICOLON exp
Rule 65    split -> c_exp s_more
Rule 66    split -> c_exp
Rule 67    s_more -> SEMICOLON c_exp s_more
Rule 68    s_more -> SEMICOLON c_exp

Terminals, with rules where they appear

CALC                 : 1
CHECK                : 2
COMA                 : 12 13 34 38 40 56 61 63
CP                   : 21 51
CSB                  : 33 36 55 59
EQUAL                : 17 45 45 47 49 50
IN                   : 19
INF                  : 37 48 49 60
ISLIST               : 5
ISNUMBER             : 4
MINUS                : 8 8 9 9 18
NAME                 : 21 26 31 51
NUM                  : 4 14 24 29 53 56 57 58
OP                   : 21 51
OSB                  : 33 36 55 59
SEMICOLON            : 39 41 57 62 64 67 68
SPLIT                : 3
SUP                  : 18 37 46 47 60
VAR                  : 25 30
error                : 

Nonterminals, with rules where they appear

c_conclusion         : 8 9
c_exp                : 15 16 28 65 66 67 68
c_list               : 27 32
c_more               : 11 13
c_moreexp            : 23 38 39
c_morelist           : 33 34 37
c_premises           : 8
c_statement          : 10 11 12 13 20
c_statement2         : 15
c_subexp             : 21 23 38 39 40 41
c_sym                : 
c_term               : 22 34 35
calc                 : 1
check                : 2
check1               : 6
check2               : 7
comparator           : 15 44
condition            : 43
exp                  : 42 44 44 51 52 61 62 63 64
list                 : 5 54
more                 : 52 61 62
morelist             : 55 56 57 60
s_more               : 65 67
split                : 3
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . CALC calc
    (2) start -> . CHECK check
    (3) start -> . SPLIT split
    (4) start -> . ISNUMBER NUM
    (5) start -> . ISLIST list

    CALC            shift and go to state 2
    CHECK           shift and go to state 3
    SPLIT           shift and go to state 4
    ISNUMBER        shift and go to state 5
    ISLIST          shift and go to state 6

    start                          shift and go to state 1

state 1

    (0) S' -> start .



state 2

    (1) start -> CALC . calc
    (42) calc -> . exp
    (43) calc -> . condition
    (51) exp -> . NAME OP exp CP
    (52) exp -> . exp more
    (53) exp -> . NUM
    (54) exp -> . list
    (44) condition -> . exp comparator exp
    (55) list -> . OSB morelist CSB
    (59) list -> . OSB CSB
    (60) list -> . INF morelist SUP

    NAME            shift and go to state 10
    NUM             shift and go to state 11
    OSB             shift and go to state 13
    INF             shift and go to state 14

    calc                           shift and go to state 7
    exp                            shift and go to state 8
    condition                      shift and go to state 9
    list                           shift and go to state 12

state 3

    (2) start -> CHECK . check
    (6) check -> . check1
    (7) check -> . check2
    (8) check1 -> . c_premises MINUS MINUS c_conclusion
    (9) check2 -> . MINUS MINUS c_conclusion
    (10) c_premises -> . c_statement
    (11) c_premises -> . c_statement c_more
    (15) c_statement -> . c_exp comparator c_statement2
    (21) c_exp -> . NAME OP c_subexp CP
    (22) c_exp -> . c_term
    (29) c_term -> . NUM
    (30) c_term -> . VAR
    (31) c_term -> . NAME
    (32) c_term -> . c_list
    (33) c_list -> . OSB c_morelist CSB
    (36) c_list -> . OSB CSB
    (37) c_list -> . INF c_morelist SUP

    MINUS           shift and go to state 19
    NAME            shift and go to state 22
    NUM             shift and go to state 24
    VAR             shift and go to state 25
    OSB             shift and go to state 27
    INF             shift and go to state 28

    check                          shift and go to state 15
    check1                         shift and go to state 16
    check2                         shift and go to state 17
    c_premises                     shift and go to state 18
    c_statement                    shift and go to state 20
    c_exp                          shift and go to state 21
    c_term                         shift and go to state 23
    c_list                         shift and go to state 26

state 4

    (3) start -> SPLIT . split
    (65) split -> . c_exp s_more
    (66) split -> . c_exp
    (21) c_exp -> . NAME OP c_subexp CP
    (22) c_exp -> . c_term
    (29) c_term -> . NUM
    (30) c_term -> . VAR
    (31) c_term -> . NAME
    (32) c_term -> . c_list
    (33) c_list -> . OSB c_morelist CSB
    (36) c_list -> . OSB CSB
    (37) c_list -> . INF c_morelist SUP

    NAME            shift and go to state 22
    NUM             shift and go to state 24
    VAR             shift and go to state 25
    OSB             shift and go to state 27
    INF             shift and go to state 28

    split                          shift and go to state 29
    c_exp                          shift and go to state 30
    c_term                         shift and go to state 23
    c_list                         shift and go to state 26

state 5

    (4) start -> ISNUMBER . NUM

    NUM             shift and go to state 31


state 6

    (5) start -> ISLIST . list
    (55) list -> . OSB morelist CSB
    (59) list -> . OSB CSB
    (60) list -> . INF morelist SUP

    OSB             shift and go to state 13
    INF             shift and go to state 14

    list                           shift and go to state 32

state 7

    (1) start -> CALC calc .

    $end            reduce using rule 1 (start -> CALC calc .)


state 8

    (42) calc -> exp .
    (52) exp -> exp . more
    (44) condition -> exp . comparator exp
    (61) more -> . COMA exp more
    (62) more -> . SEMICOLON exp more
    (63) more -> . COMA exp
    (64) more -> . SEMICOLON exp
    (45) comparator -> . EQUAL EQUAL
    (46) comparator -> . SUP
    (47) comparator -> . SUP EQUAL
    (48) comparator -> . INF
    (49) comparator -> . INF EQUAL
    (50) comparator -> . EQUAL

    $end            reduce using rule 42 (calc -> exp .)
    COMA            shift and go to state 35
    SEMICOLON       shift and go to state 36
    EQUAL           shift and go to state 37
    SUP             shift and go to state 38
    INF             shift and go to state 39

    more                           shift and go to state 33
    comparator                     shift and go to state 34

state 9

    (43) calc -> condition .

    $end            reduce using rule 43 (calc -> condition .)


state 10

    (51) exp -> NAME . OP exp CP

    OP              shift and go to state 40


state 11

    (53) exp -> NUM .

    COMA            reduce using rule 53 (exp -> NUM .)
    SEMICOLON       reduce using rule 53 (exp -> NUM .)
    EQUAL           reduce using rule 53 (exp -> NUM .)
    SUP             reduce using rule 53 (exp -> NUM .)
    INF             reduce using rule 53 (exp -> NUM .)
    $end            reduce using rule 53 (exp -> NUM .)
    CP              reduce using rule 53 (exp -> NUM .)


state 12

    (54) exp -> list .

    COMA            reduce using rule 54 (exp -> list .)
    SEMICOLON       reduce using rule 54 (exp -> list .)
    EQUAL           reduce using rule 54 (exp -> list .)
    SUP             reduce using rule 54 (exp -> list .)
    INF             reduce using rule 54 (exp -> list .)
    $end            reduce using rule 54 (exp -> list .)
    CP              reduce using rule 54 (exp -> list .)


state 13

    (55) list -> OSB . morelist CSB
    (59) list -> OSB . CSB
    (56) morelist -> . NUM COMA morelist
    (57) morelist -> . NUM SEMICOLON morelist
    (58) morelist -> . NUM

    CSB             shift and go to state 42
    NUM             shift and go to state 43

    morelist                       shift and go to state 41

state 14

    (60) list -> INF . morelist SUP
    (56) morelist -> . NUM COMA morelist
    (57) morelist -> . NUM SEMICOLON morelist
    (58) morelist -> . NUM

    NUM             shift and go to state 43

    morelist                       shift and go to state 44

state 15

    (2) start -> CHECK check .

    $end            reduce using rule 2 (start -> CHECK check .)


state 16

    (6) check -> check1 .

    $end            reduce using rule 6 (check -> check1 .)


state 17

    (7) check -> check2 .

    $end            reduce using rule 7 (check -> check2 .)


state 18

    (8) check1 -> c_premises . MINUS MINUS c_conclusion

    MINUS           shift and go to state 45


state 19

    (9) check2 -> MINUS . MINUS c_conclusion

    MINUS           shift and go to state 46


state 20

    (10) c_premises -> c_statement .
    (11) c_premises -> c_statement . c_more
    (12) c_more -> . COMA c_statement
    (13) c_more -> . COMA c_statement c_more
    (14) c_more -> . NUM

    MINUS           reduce using rule 10 (c_premises -> c_statement .)
    COMA            shift and go to state 48
    NUM             shift and go to state 49

    c_more                         shift and go to state 47

state 21

    (15) c_statement -> c_exp . comparator c_statement2
    (45) comparator -> . EQUAL EQUAL
    (46) comparator -> . SUP
    (47) comparator -> . SUP EQUAL
    (48) comparator -> . INF
    (49) comparator -> . INF EQUAL
    (50) comparator -> . EQUAL

    EQUAL           shift and go to state 37
    SUP             shift and go to state 38
    INF             shift and go to state 39

    comparator                     shift and go to state 50

state 22

    (21) c_exp -> NAME . OP c_subexp CP
    (31) c_term -> NAME .

    OP              shift and go to state 51
    EQUAL           reduce using rule 31 (c_term -> NAME .)
    SUP             reduce using rule 31 (c_term -> NAME .)
    INF             reduce using rule 31 (c_term -> NAME .)
    SEMICOLON       reduce using rule 31 (c_term -> NAME .)
    $end            reduce using rule 31 (c_term -> NAME .)
    COMA            reduce using rule 31 (c_term -> NAME .)
    NUM             reduce using rule 31 (c_term -> NAME .)
    MINUS           reduce using rule 31 (c_term -> NAME .)


state 23

    (22) c_exp -> c_term .

    EQUAL           reduce using rule 22 (c_exp -> c_term .)
    SUP             reduce using rule 22 (c_exp -> c_term .)
    INF             reduce using rule 22 (c_exp -> c_term .)
    SEMICOLON       reduce using rule 22 (c_exp -> c_term .)
    $end            reduce using rule 22 (c_exp -> c_term .)
    COMA            reduce using rule 22 (c_exp -> c_term .)
    NUM             reduce using rule 22 (c_exp -> c_term .)
    MINUS           reduce using rule 22 (c_exp -> c_term .)
    CP              reduce using rule 22 (c_exp -> c_term .)


state 24

    (29) c_term -> NUM .

    EQUAL           reduce using rule 29 (c_term -> NUM .)
    SUP             reduce using rule 29 (c_term -> NUM .)
    INF             reduce using rule 29 (c_term -> NUM .)
    SEMICOLON       reduce using rule 29 (c_term -> NUM .)
    $end            reduce using rule 29 (c_term -> NUM .)
    COMA            reduce using rule 29 (c_term -> NUM .)
    CSB             reduce using rule 29 (c_term -> NUM .)
    NUM             reduce using rule 29 (c_term -> NUM .)
    MINUS           reduce using rule 29 (c_term -> NUM .)


state 25

    (30) c_term -> VAR .

    EQUAL           reduce using rule 30 (c_term -> VAR .)
    SUP             reduce using rule 30 (c_term -> VAR .)
    INF             reduce using rule 30 (c_term -> VAR .)
    SEMICOLON       reduce using rule 30 (c_term -> VAR .)
    $end            reduce using rule 30 (c_term -> VAR .)
    COMA            reduce using rule 30 (c_term -> VAR .)
    CSB             reduce using rule 30 (c_term -> VAR .)
    NUM             reduce using rule 30 (c_term -> VAR .)
    MINUS           reduce using rule 30 (c_term -> VAR .)


state 26

    (32) c_term -> c_list .

    EQUAL           reduce using rule 32 (c_term -> c_list .)
    SUP             reduce using rule 32 (c_term -> c_list .)
    INF             reduce using rule 32 (c_term -> c_list .)
    SEMICOLON       reduce using rule 32 (c_term -> c_list .)
    $end            reduce using rule 32 (c_term -> c_list .)
    COMA            reduce using rule 32 (c_term -> c_list .)
    CSB             reduce using rule 32 (c_term -> c_list .)
    NUM             reduce using rule 32 (c_term -> c_list .)
    MINUS           reduce using rule 32 (c_term -> c_list .)


state 27

    (33) c_list -> OSB . c_morelist CSB
    (36) c_list -> OSB . CSB
    (34) c_morelist -> . c_term COMA c_morelist
    (35) c_morelist -> . c_term
    (29) c_term -> . NUM
    (30) c_term -> . VAR
    (31) c_term -> . NAME
    (32) c_term -> . c_list
    (33) c_list -> . OSB c_morelist CSB
    (36) c_list -> . OSB CSB
    (37) c_list -> . INF c_morelist SUP

    CSB             shift and go to state 53
    NUM             shift and go to state 24
    VAR             shift and go to state 25
    NAME            shift and go to state 55
    OSB             shift and go to state 27
    INF             shift and go to state 28

    c_morelist                     shift and go to state 52
    c_term                         shift and go to state 54
    c_list                         shift and go to state 26

state 28

    (37) c_list -> INF . c_morelist SUP
    (34) c_morelist -> . c_term COMA c_morelist
    (35) c_morelist -> . c_term
    (29) c_term -> . NUM
    (30) c_term -> . VAR
    (31) c_term -> . NAME
    (32) c_term -> . c_list
    (33) c_list -> . OSB c_morelist CSB
    (36) c_list -> . OSB CSB
    (37) c_list -> . INF c_morelist SUP

    NUM             shift and go to state 24
    VAR             shift and go to state 25
    NAME            shift and go to state 55
    OSB             shift and go to state 27
    INF             shift and go to state 28

    c_morelist                     shift and go to state 56
    c_term                         shift and go to state 54
    c_list                         shift and go to state 26

state 29

    (3) start -> SPLIT split .

    $end            reduce using rule 3 (start -> SPLIT split .)


state 30

    (65) split -> c_exp . s_more
    (66) split -> c_exp .
    (67) s_more -> . SEMICOLON c_exp s_more
    (68) s_more -> . SEMICOLON c_exp

    $end            reduce using rule 66 (split -> c_exp .)
    SEMICOLON       shift and go to state 58

    s_more                         shift and go to state 57

state 31

    (4) start -> ISNUMBER NUM .

    $end            reduce using rule 4 (start -> ISNUMBER NUM .)


state 32

    (5) start -> ISLIST list .

    $end            reduce using rule 5 (start -> ISLIST list .)


state 33

    (52) exp -> exp more .

    COMA            reduce using rule 52 (exp -> exp more .)
    SEMICOLON       reduce using rule 52 (exp -> exp more .)
    EQUAL           reduce using rule 52 (exp -> exp more .)
    SUP             reduce using rule 52 (exp -> exp more .)
    INF             reduce using rule 52 (exp -> exp more .)
    $end            reduce using rule 52 (exp -> exp more .)
    CP              reduce using rule 52 (exp -> exp more .)


state 34

    (44) condition -> exp comparator . exp
    (51) exp -> . NAME OP exp CP
    (52) exp -> . exp more
    (53) exp -> . NUM
    (54) exp -> . list
    (55) list -> . OSB morelist CSB
    (59) list -> . OSB CSB
    (60) list -> . INF morelist SUP

    NAME            shift and go to state 10
    NUM             shift and go to state 11
    OSB             shift and go to state 13
    INF             shift and go to state 14

    exp                            shift and go to state 59
    list                           shift and go to state 12

state 35

    (61) more -> COMA . exp more
    (63) more -> COMA . exp
    (51) exp -> . NAME OP exp CP
    (52) exp -> . exp more
    (53) exp -> . NUM
    (54) exp -> . list
    (55) list -> . OSB morelist CSB
    (59) list -> . OSB CSB
    (60) list -> . INF morelist SUP

    NAME            shift and go to state 10
    NUM             shift and go to state 11
    OSB             shift and go to state 13
    INF             shift and go to state 14

    exp                            shift and go to state 60
    list                           shift and go to state 12

state 36

    (62) more -> SEMICOLON . exp more
    (64) more -> SEMICOLON . exp
    (51) exp -> . NAME OP exp CP
    (52) exp -> . exp more
    (53) exp -> . NUM
    (54) exp -> . list
    (55) list -> . OSB morelist CSB
    (59) list -> . OSB CSB
    (60) list -> . INF morelist SUP

    NAME            shift and go to state 10
    NUM             shift and go to state 11
    OSB             shift and go to state 13
    INF             shift and go to state 14

    exp                            shift and go to state 61
    list                           shift and go to state 12

state 37

    (45) comparator -> EQUAL . EQUAL
    (50) comparator -> EQUAL .

    EQUAL           shift and go to state 62
    NAME            reduce using rule 50 (comparator -> EQUAL .)
    NUM             reduce using rule 50 (comparator -> EQUAL .)
    OSB             reduce using rule 50 (comparator -> EQUAL .)
    INF             reduce using rule 50 (comparator -> EQUAL .)
    VAR             reduce using rule 50 (comparator -> EQUAL .)


state 38

    (46) comparator -> SUP .
    (47) comparator -> SUP . EQUAL

    NAME            reduce using rule 46 (comparator -> SUP .)
    NUM             reduce using rule 46 (comparator -> SUP .)
    OSB             reduce using rule 46 (comparator -> SUP .)
    INF             reduce using rule 46 (comparator -> SUP .)
    VAR             reduce using rule 46 (comparator -> SUP .)
    EQUAL           shift and go to state 63


state 39

    (48) comparator -> INF .
    (49) comparator -> INF . EQUAL

    NAME            reduce using rule 48 (comparator -> INF .)
    NUM             reduce using rule 48 (comparator -> INF .)
    OSB             reduce using rule 48 (comparator -> INF .)
    INF             reduce using rule 48 (comparator -> INF .)
    VAR             reduce using rule 48 (comparator -> INF .)
    EQUAL           shift and go to state 64


state 40

    (51) exp -> NAME OP . exp CP
    (51) exp -> . NAME OP exp CP
    (52) exp -> . exp more
    (53) exp -> . NUM
    (54) exp -> . list
    (55) list -> . OSB morelist CSB
    (59) list -> . OSB CSB
    (60) list -> . INF morelist SUP

    NAME            shift and go to state 10
    NUM             shift and go to state 11
    OSB             shift and go to state 13
    INF             shift and go to state 14

    exp                            shift and go to state 65
    list                           shift and go to state 12

state 41

    (55) list -> OSB morelist . CSB

    CSB             shift and go to state 66


state 42

    (59) list -> OSB CSB .

    COMA            reduce using rule 59 (list -> OSB CSB .)
    SEMICOLON       reduce using rule 59 (list -> OSB CSB .)
    EQUAL           reduce using rule 59 (list -> OSB CSB .)
    SUP             reduce using rule 59 (list -> OSB CSB .)
    INF             reduce using rule 59 (list -> OSB CSB .)
    $end            reduce using rule 59 (list -> OSB CSB .)
    CP              reduce using rule 59 (list -> OSB CSB .)


state 43

    (56) morelist -> NUM . COMA morelist
    (57) morelist -> NUM . SEMICOLON morelist
    (58) morelist -> NUM .

    COMA            shift and go to state 67
    SEMICOLON       shift and go to state 68
    CSB             reduce using rule 58 (morelist -> NUM .)
    SUP             reduce using rule 58 (morelist -> NUM .)


state 44

    (60) list -> INF morelist . SUP

    SUP             shift and go to state 69


state 45

    (8) check1 -> c_premises MINUS . MINUS c_conclusion

    MINUS           shift and go to state 70


state 46

    (9) check2 -> MINUS MINUS . c_conclusion
    (20) c_conclusion -> . c_statement
    (15) c_statement -> . c_exp comparator c_statement2
    (21) c_exp -> . NAME OP c_subexp CP
    (22) c_exp -> . c_term
    (29) c_term -> . NUM
    (30) c_term -> . VAR
    (31) c_term -> . NAME
    (32) c_term -> . c_list
    (33) c_list -> . OSB c_morelist CSB
    (36) c_list -> . OSB CSB
    (37) c_list -> . INF c_morelist SUP

    NAME            shift and go to state 22
    NUM             shift and go to state 24
    VAR             shift and go to state 25
    OSB             shift and go to state 27
    INF             shift and go to state 28

    c_conclusion                   shift and go to state 71
    c_statement                    shift and go to state 72
    c_exp                          shift and go to state 21
    c_term                         shift and go to state 23
    c_list                         shift and go to state 26

state 47

    (11) c_premises -> c_statement c_more .

    MINUS           reduce using rule 11 (c_premises -> c_statement c_more .)


state 48

    (12) c_more -> COMA . c_statement
    (13) c_more -> COMA . c_statement c_more
    (15) c_statement -> . c_exp comparator c_statement2
    (21) c_exp -> . NAME OP c_subexp CP
    (22) c_exp -> . c_term
    (29) c_term -> . NUM
    (30) c_term -> . VAR
    (31) c_term -> . NAME
    (32) c_term -> . c_list
    (33) c_list -> . OSB c_morelist CSB
    (36) c_list -> . OSB CSB
    (37) c_list -> . INF c_morelist SUP

    NAME            shift and go to state 22
    NUM             shift and go to state 24
    VAR             shift and go to state 25
    OSB             shift and go to state 27
    INF             shift and go to state 28

    c_statement                    shift and go to state 73
    c_exp                          shift and go to state 21
    c_term                         shift and go to state 23
    c_list                         shift and go to state 26

state 49

    (14) c_more -> NUM .

    MINUS           reduce using rule 14 (c_more -> NUM .)


state 50

    (15) c_statement -> c_exp comparator . c_statement2
    (16) c_statement2 -> . c_exp
    (21) c_exp -> . NAME OP c_subexp CP
    (22) c_exp -> . c_term
    (29) c_term -> . NUM
    (30) c_term -> . VAR
    (31) c_term -> . NAME
    (32) c_term -> . c_list
    (33) c_list -> . OSB c_morelist CSB
    (36) c_list -> . OSB CSB
    (37) c_list -> . INF c_morelist SUP

    NAME            shift and go to state 22
    NUM             shift and go to state 24
    VAR             shift and go to state 25
    OSB             shift and go to state 27
    INF             shift and go to state 28

    c_exp                          shift and go to state 74
    c_statement2                   shift and go to state 75
    c_term                         shift and go to state 23
    c_list                         shift and go to state 26

state 51

    (21) c_exp -> NAME OP . c_subexp CP
    (23) c_subexp -> . c_subexp c_moreexp
    (24) c_subexp -> . NUM
    (25) c_subexp -> . VAR
    (26) c_subexp -> . NAME
    (27) c_subexp -> . c_list
    (28) c_subexp -> . c_exp
    (33) c_list -> . OSB c_morelist CSB
    (36) c_list -> . OSB CSB
    (37) c_list -> . INF c_morelist SUP
    (21) c_exp -> . NAME OP c_subexp CP
    (22) c_exp -> . c_term
    (29) c_term -> . NUM
    (30) c_term -> . VAR
    (31) c_term -> . NAME
    (32) c_term -> . c_list

    NUM             shift and go to state 78
    VAR             shift and go to state 79
    NAME            shift and go to state 76
    OSB             shift and go to state 27
    INF             shift and go to state 28

    c_subexp                       shift and go to state 77
    c_list                         shift and go to state 80
    c_exp                          shift and go to state 81
    c_term                         shift and go to state 23

state 52

    (33) c_list -> OSB c_morelist . CSB

    CSB             shift and go to state 82


state 53

    (36) c_list -> OSB CSB .

    EQUAL           reduce using rule 36 (c_list -> OSB CSB .)
    SUP             reduce using rule 36 (c_list -> OSB CSB .)
    INF             reduce using rule 36 (c_list -> OSB CSB .)
    SEMICOLON       reduce using rule 36 (c_list -> OSB CSB .)
    $end            reduce using rule 36 (c_list -> OSB CSB .)
    COMA            reduce using rule 36 (c_list -> OSB CSB .)
    CSB             reduce using rule 36 (c_list -> OSB CSB .)
    NUM             reduce using rule 36 (c_list -> OSB CSB .)
    MINUS           reduce using rule 36 (c_list -> OSB CSB .)
    CP              reduce using rule 36 (c_list -> OSB CSB .)


state 54

    (34) c_morelist -> c_term . COMA c_morelist
    (35) c_morelist -> c_term .

    COMA            shift and go to state 83
    CSB             reduce using rule 35 (c_morelist -> c_term .)
    SUP             reduce using rule 35 (c_morelist -> c_term .)


state 55

    (31) c_term -> NAME .

    COMA            reduce using rule 31 (c_term -> NAME .)
    CSB             reduce using rule 31 (c_term -> NAME .)
    SUP             reduce using rule 31 (c_term -> NAME .)


state 56

    (37) c_list -> INF c_morelist . SUP

    SUP             shift and go to state 84


state 57

    (65) split -> c_exp s_more .

    $end            reduce using rule 65 (split -> c_exp s_more .)


state 58

    (67) s_more -> SEMICOLON . c_exp s_more
    (68) s_more -> SEMICOLON . c_exp
    (21) c_exp -> . NAME OP c_subexp CP
    (22) c_exp -> . c_term
    (29) c_term -> . NUM
    (30) c_term -> . VAR
    (31) c_term -> . NAME
    (32) c_term -> . c_list
    (33) c_list -> . OSB c_morelist CSB
    (36) c_list -> . OSB CSB
    (37) c_list -> . INF c_morelist SUP

    NAME            shift and go to state 22
    NUM             shift and go to state 24
    VAR             shift and go to state 25
    OSB             shift and go to state 27
    INF             shift and go to state 28

    c_exp                          shift and go to state 85
    c_term                         shift and go to state 23
    c_list                         shift and go to state 26

state 59

    (44) condition -> exp comparator exp .
    (52) exp -> exp . more
    (61) more -> . COMA exp more
    (62) more -> . SEMICOLON exp more
    (63) more -> . COMA exp
    (64) more -> . SEMICOLON exp

    $end            reduce using rule 44 (condition -> exp comparator exp .)
    COMA            shift and go to state 35
    SEMICOLON       shift and go to state 36

    more                           shift and go to state 33

state 60

    (61) more -> COMA exp . more
    (63) more -> COMA exp .
    (52) exp -> exp . more
    (61) more -> . COMA exp more
    (62) more -> . SEMICOLON exp more
    (63) more -> . COMA exp
    (64) more -> . SEMICOLON exp

  ! shift/reduce conflict for COMA resolved as shift
  ! shift/reduce conflict for SEMICOLON resolved as shift
    EQUAL           reduce using rule 63 (more -> COMA exp .)
    SUP             reduce using rule 63 (more -> COMA exp .)
    INF             reduce using rule 63 (more -> COMA exp .)
    $end            reduce using rule 63 (more -> COMA exp .)
    CP              reduce using rule 63 (more -> COMA exp .)
    COMA            shift and go to state 35
    SEMICOLON       shift and go to state 36

  ! COMA            [ reduce using rule 63 (more -> COMA exp .) ]
  ! SEMICOLON       [ reduce using rule 63 (more -> COMA exp .) ]

    more                           shift and go to state 86

state 61

    (62) more -> SEMICOLON exp . more
    (64) more -> SEMICOLON exp .
    (52) exp -> exp . more
    (61) more -> . COMA exp more
    (62) more -> . SEMICOLON exp more
    (63) more -> . COMA exp
    (64) more -> . SEMICOLON exp

  ! shift/reduce conflict for COMA resolved as shift
  ! shift/reduce conflict for SEMICOLON resolved as shift
    EQUAL           reduce using rule 64 (more -> SEMICOLON exp .)
    SUP             reduce using rule 64 (more -> SEMICOLON exp .)
    INF             reduce using rule 64 (more -> SEMICOLON exp .)
    $end            reduce using rule 64 (more -> SEMICOLON exp .)
    CP              reduce using rule 64 (more -> SEMICOLON exp .)
    COMA            shift and go to state 35
    SEMICOLON       shift and go to state 36

  ! COMA            [ reduce using rule 64 (more -> SEMICOLON exp .) ]
  ! SEMICOLON       [ reduce using rule 64 (more -> SEMICOLON exp .) ]

    more                           shift and go to state 87

state 62

    (45) comparator -> EQUAL EQUAL .

    NAME            reduce using rule 45 (comparator -> EQUAL EQUAL .)
    NUM             reduce using rule 45 (comparator -> EQUAL EQUAL .)
    OSB             reduce using rule 45 (comparator -> EQUAL EQUAL .)
    INF             reduce using rule 45 (comparator -> EQUAL EQUAL .)
    VAR             reduce using rule 45 (comparator -> EQUAL EQUAL .)


state 63

    (47) comparator -> SUP EQUAL .

    NAME            reduce using rule 47 (comparator -> SUP EQUAL .)
    NUM             reduce using rule 47 (comparator -> SUP EQUAL .)
    OSB             reduce using rule 47 (comparator -> SUP EQUAL .)
    INF             reduce using rule 47 (comparator -> SUP EQUAL .)
    VAR             reduce using rule 47 (comparator -> SUP EQUAL .)


state 64

    (49) comparator -> INF EQUAL .

    NAME            reduce using rule 49 (comparator -> INF EQUAL .)
    NUM             reduce using rule 49 (comparator -> INF EQUAL .)
    OSB             reduce using rule 49 (comparator -> INF EQUAL .)
    INF             reduce using rule 49 (comparator -> INF EQUAL .)
    VAR             reduce using rule 49 (comparator -> INF EQUAL .)


state 65

    (51) exp -> NAME OP exp . CP
    (52) exp -> exp . more
    (61) more -> . COMA exp more
    (62) more -> . SEMICOLON exp more
    (63) more -> . COMA exp
    (64) more -> . SEMICOLON exp

    CP              shift and go to state 88
    COMA            shift and go to state 35
    SEMICOLON       shift and go to state 36

    more                           shift and go to state 33

state 66

    (55) list -> OSB morelist CSB .

    COMA            reduce using rule 55 (list -> OSB morelist CSB .)
    SEMICOLON       reduce using rule 55 (list -> OSB morelist CSB .)
    EQUAL           reduce using rule 55 (list -> OSB morelist CSB .)
    SUP             reduce using rule 55 (list -> OSB morelist CSB .)
    INF             reduce using rule 55 (list -> OSB morelist CSB .)
    $end            reduce using rule 55 (list -> OSB morelist CSB .)
    CP              reduce using rule 55 (list -> OSB morelist CSB .)


state 67

    (56) morelist -> NUM COMA . morelist
    (56) morelist -> . NUM COMA morelist
    (57) morelist -> . NUM SEMICOLON morelist
    (58) morelist -> . NUM

    NUM             shift and go to state 43

    morelist                       shift and go to state 89

state 68

    (57) morelist -> NUM SEMICOLON . morelist
    (56) morelist -> . NUM COMA morelist
    (57) morelist -> . NUM SEMICOLON morelist
    (58) morelist -> . NUM

    NUM             shift and go to state 43

    morelist                       shift and go to state 90

state 69

    (60) list -> INF morelist SUP .

    COMA            reduce using rule 60 (list -> INF morelist SUP .)
    SEMICOLON       reduce using rule 60 (list -> INF morelist SUP .)
    EQUAL           reduce using rule 60 (list -> INF morelist SUP .)
    SUP             reduce using rule 60 (list -> INF morelist SUP .)
    INF             reduce using rule 60 (list -> INF morelist SUP .)
    $end            reduce using rule 60 (list -> INF morelist SUP .)
    CP              reduce using rule 60 (list -> INF morelist SUP .)


state 70
